<resources>
    <string name="app_name">Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IvanIvanov@gmail.com</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="find_city">Find city</string>
    <string name="lang">En/Ru</string>
    <string name="cels">Celsius</string>
    <string name="fahren">Fahrenheit</string>
    <string name="units">Units of measurement</string>
    <string name="abour_dev">About developers</string>
    <string name="feedback">Feedback</string>
    <string name="Moscow">Moscow</string>
    <string name="Peterburg">S.Peterburg</string>
    <string name="NNovgorod">N. Novgorod</string>
    <string name="wind_val">3 mps</string>
    <string name="humid_val"> 755 mm Hg</string>
    <string name="for_ten_days">For ten days</string>
    <string name="current_param">Current parameters</string>
    <string name="temper">Temperature:</string>
    <string name="humid">Humidity:</string>
    <string name="wind">Wind:</string>
    <string name="press">Pressure:</string>
    <string name="ok">OK</string>
    <string name="avg">Calculate averages temperature for</string>
    <string name="For_5_days">5 day forecast</string>
    <string name="mps"> mps</string>
    <string name="hpa"> hpa</string>
    <string name="pos">My position</string>
    <string name="Sorry">Sorry, city not found!</string>
    <string name="Error">Error</string>
    <string name="enter_city">Enter your city</string>

</resources>
