<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/units">
        <menu>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/celsius"
            android:icon="@drawable/cels"
            android:title="@string/cels"
            android:checked="false"/>
        <item
            android:id="@+id/fahrenheit"
            android:icon="@drawable/faren"
            android:title="@string/fahren" />
    </group>
        </menu>
    </item>



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/about_dev"
            android:title="@string/abour_dev" />
        <item
            android:id="@+id/feedback"
            android:title="@string/feedback" />
    </group>

</menu>
