<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="@dimen/elevation"
        card_view:cardCornerRadius="@dimen/card_album_radius">
        <!-- elevation - приподнятость элемента,
        cardCornerRadius - округленность углов-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_date"
                android:layout_gravity="center_horizontal"/>


            <TextView
                android:id="@+id/card_temper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temper"/>

            <TextView
                android:id="@+id/card_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"/>

            <TextView
                android:id="@+id/card_humid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humid"/>

            <TextView
                android:id="@+id/card_press"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/press"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>